--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -22,6 +22,15 @@ h1{
   font-weight: 200;
 }
 
-#memory_table{
+#memory_table, #next_btn{
   display:none;
+}
+
+table { 
+  border-spacing: 10px !important;
+  border-collapse: separate !important;
+}
+
+td { 
+  padding: 5px !important;
 }
